# poc-factory-sample-output

./: README.md  run-plan.json  run-report.json  run-summary.md
01-untrusted-data-boundary/: .env.example  CLAUDE.md  README.md  build-report.json  pyproject.toml
01-untrusted-data-boundary/_docs/: 01-untrusted-data-boundary.md  code-implementation-01-untrusted-data-boundary.md
01-untrusted-data-boundary/app/: main.py
01-untrusted-data-boundary/app/api/: routes.py
01-untrusted-data-boundary/app/models/: schemas.py
01-untrusted-data-boundary/app/services/: openai_service.py  sanitization_service.py  validation_service.py
01-untrusted-data-boundary/tests/: test_api.py  test_sanitization_service.py  test_validation_service.py
02-input-schema-enforcement/: CLAUDE.md  README.md  build-report.json  pyproject.toml
02-input-schema-enforcement/_docs/: 02-input-schema-enforcement.md  (+1 more)
03-parameterized-queries/: .env.example  CLAUDE.md  README.md  build-report.json  pyproject.toml
04-output-encoding-practices/: CLAUDE.md  README.md  build-report.json  pyproject.toml
04-output-encoding-practices/_docs/: 04-output-encoding-practices.md  code-implementation-04-output-encoding-practices.md
04-output-encoding-practices/app/: main.py
04-output-encoding-practices/app/api/: routes.py
04-output-encoding-practices/app/models/: schemas.py
04-output-encoding-practices/app/services/: encoder.py
04-output-encoding-practices/tests/: test_api.py  test_encoder.py
05-rate-limiting-strategies/: CLAUDE.md  README.md  build-report.json  pyproject.toml
(+22 files in other folders)
